# Privite_2D3D_CAD

./: .gitignore  Cargo.toml  README.md  file_save_docs.md
crates/cad_app/: Cargo.toml
crates/cad_app/src/: app.rs  camera.rs  demo.rs  main.rs  tool.rs
crates/cad_batch/: Cargo.toml
crates/cad_batch/src/: lib.rs
crates/cad_cli/: Cargo.toml
crates/cad_cli/src/: main.rs
crates/cad_command/: Cargo.toml
crates/cad_command/src/: lib.rs
crates/cad_core/: Cargo.toml
crates/cad_core/src/: lib.rs
crates/cad_geometry/: Cargo.toml
crates/cad_geometry/src/: lib.rs
crates/cad_io/: Cargo.toml
crates/cad_io/src/: lib.rs
crates/cad_render/: Cargo.toml
crates/cad_render/src/: lib.rs
crates/cad_tolerance/: Cargo.toml
crates/cad_tolerance/src/: lib.rs
docs/: 00_문서_목차.md  01_제품_기획_정책.md  02_아키텍처_정책.md  03_백엔드_구조_정책.md  04_UI_와이어프레임_정책.md  05_사용자_승인_정책.md  06_AI_개발_작업_명령서.md
work_flow/: work_phase2.md  work_phase3.md  work_phase4.md  work_phase5.md  work_phase6.md  work_phase7.md  work_phase8a.md  work_phase8b.md  work_phasse1.md
