[workspace]
resolver = "2"
members = [
    "crates/cad_core",
    "crates/cad_geometry",
    "crates/cad_tolerance",
    "crates/cad_command",
    "crates/cad_render",
    "crates/cad_io",
    "crates/cad_batch",
    "crates/cad_cli",
    "crates/cad_app",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egui = "0.29"
eframe = { version = "0.29", default-features = true }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

