[package]
name = "cad_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cad_core = { path = "../cad_core" }
cad_geometry = { path = "../cad_geometry" }
cad_command = { path = "../cad_command" }
cad_render = { path = "../cad_render" }
egui = { workspace = true }
eframe = { workspace = true }

[lints]
workspace = true

